diesel_compile_tests/tests/fail/table_invalid_syntax_2.rs
#[macro_use] extern crate diesel;

table! {
     some wrong syntax
}
// error-pattern: Invalid `table!` syntax. Please see the `table!` macro docs for more info.

fn main() {}
