diesel_compile_tests/tests/fail/table_invalid_syntax_2.stderr
error: expected curly braces
 --> tests/fail/table_invalid_syntax_2.rs:4:11
  |
4 |      some wrong syntax
  |           ^^^^^
